provisioning/kubernetes/lesson2/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: s<
